# rcip-format

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SPECIFICATION.md
docs/: api-reference.md  device-profile.md  implementation-guide.md  sensor-specifications.md
examples/: margherita-pizza.rcip  simple-example.rcip  ukrainian-borscht.rcip
schemas/: rcip-v0.1.json  rcip-v0.1.yaml  rcip-v0.1xsd
validators/javascript/: README.md  package.json  rcip-validator.js
validators/python/: README.md  pyproject.toml  rcip_validator.py  requirements.txt
validators/rust/: Cargo.toml  README.md
validators/rust/src/: lib.rs  main.rs
visual/: reference-ui.html
