[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcip-validator"
version = "1.0.0"
description = "RCIP Format Validator for Python"
readme = "README.md"
authors = [
    { name = "Alexey Kozlov", email = "alexey@rcip-format.org" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup"
]
requires-python = ">=3.8"
dependencies = [
    "jsonschema>=4.0.0",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
rcip-validator = "rcip_validator:main"

[project.urls]
Homepage = "https://github.com/AlexeyKoz/rcip-format"
Documentation = "https://rcip-format.org/docs"
Repository = "https://github.com/AlexeyKoz/rcip-format"
Issues = "https://github.com/AlexeyKoz/rcip-format/issues"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

---